--- a/template/modal/backdrop.html
+++ b/template/modal/backdrop.html
@@ -1,5 +1,5 @@
 <div class="modal-backdrop"
-     modal-animation-class="fade"
+     uib-modal-animation-class="fade"
      modal-in-class="in"
      ng-style="{'z-index': 1040 + (index && 1 || 0) + index*10}"
 ></div>
