--- a/css/custom.css
+++ b/css/custom.css
@@ -85,9 +85,9 @@ body {
 	min-height: 100%;
     height: auto;
     /* Negative indent footer by its height */
-    margin: 0 auto -20px 0;
+    margin: 0px 0px -20px 0px;
     /* Pad bottom by footer height */
-    padding: 0 0 20px 0;
+    padding: 0px 0px 20px 0px;
     position: relative;
 }
 footer {
@@ -191,6 +191,11 @@ footer {
 	opacity: .85;
 }
 
+.spinner {
+	margin-bottom: 40px;
+	color:black;
+}
+
 /* examples modal*/
 
 .modal.fade {
@@ -240,8 +245,6 @@ footer {
 #image-modal .close:active {
 	outline: 0;
 }
-
-
 
 #image-modal img {
 	margin: 0 auto;
