--- a/views/main.html
+++ b/views/main.html
@@ -1,3 +1,8 @@
+<script>
+ VK.Share.button({url: 'http://vovadoors.by', title: 'Мастер по установке дверей', image: '/images/vk-advert.jpg'});
+</script>
+
+
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
@@ -6,6 +11,7 @@
         <h1>МТС: 8 029 558-28-26 Владимир</h1>
         <h1>Velcom: 8 044 494-64-43 Владимир</h1>        
         <p><a class="btn btn-danger btn-lg" href="https://docs.google.com/forms/d/1lJ9VgnFl9_QzRZyEAfLzK_Q86Glbx9ahZHWAff0DYY8/viewform?usp=send_form" target="_blank" role="button">Задать вопрос &raquo;</a></p>
+        <p><a class="btn btn-default btn-lg vk-btn" onclick="return VK.Share.click(0, this);">Рекомендовать нас<img class="vk-icon" src="images/vk-icon.png"/></a></p>
       </div>
     </div>
 
